fixes, examples